--- a/index.css
+++ b/index.css
@@ -700,7 +700,11 @@ margin: auto;
 #background{
     background-color:lightblue;
     object-fit: cover;
-    inset: 0;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0
     margin: auto;
+    margin-bottom:10vh;
 }
 }
